Updated project files and added experiment-1/index.html

--- a/projects/experiment-1/index.html
+++ b/projects/experiment-1/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Christopher Bilger">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Project Name/Title</title>
+    <title>Experiment: Custom JavaScript UI Framework</title>
     <link rel="icon" type="image/x-icon" href="../../images/favicon.ico">
     <link rel="stylesheet" media="screen" href="../../css/mvp.css">
     <link rel="stylesheet" media="screen" href="../../css/styles.css">
@@ -24,7 +24,7 @@
     <main hidden>
         <a href="/projects">Back to Projects List</a>
 
-        <h1>Project Name/Title</h1>
+        <h1>Experiment: Custom JavaScript UI Framework</h1>
 
         <p>
             Description...
