--- a/projects/cube-mate/index.html
+++ b/projects/cube-mate/index.html
@@ -24,7 +24,8 @@
 
         <h1>Cube Mate (Rubik's Cube Tools)</h1>
 
-        <p><b>Cube Mate</b> is an extremely minimal set of tools that I am using to learn (at my own pace) efficient
+        <p>
+            <b>Cube Mate</b> is an extremely minimal set of tools that I am using to learn (at my own pace) efficient
             Rubik's Cube solving methods. If you wish to use better tools, look into the website
             <a href="https://cstimer.net/" target="_blank">cstimer.net &nearr;</a>. No data/information/values/etc. is
             sent away from your local browser instance.
