Reworked future certifications

--- a/index.html
+++ b/index.html
@@ -245,13 +245,39 @@
             <h2><a href="#certifications">Certifications</a></h2>
             <hr>
 
-            <p><b>DevOps Engineering on AWS</b>: Accredited through ExitCertified, this certification enhances and
+            <!-- 2023 -->
+            <!-- <p>
+                <b>Professional Scrum Master&trade; I</b> | The PSM I training and certification taught me the
+                fundamentals of leading a scrum team as a Scrum Master in the field of software engineering.
+                <em>INSERT DATE OBTAINED - Forever</em>
+            </p> -->
+
+            <!-- 2023? -->
+            <!-- <p>
+                <b>Lead Software Engineer Development Qualification Program</b> | Lockheed Martin's internal training
+                and qualification program for transitioning mid-level software engineers into leadership roles allowed
+                me to fine-tune and refine my leadership skills as well as put them to use on engineering teams.
+                <em>INSERT DATE OBTAINED - Forever</em>
+            </p> -->
+
+            <!-- 2022 -->
+            <!-- <p>
+                <b>Deep Learning A-Z&trade;: Hands-On Artificial Neural Networks</b> | Udemy's online course allowed me
+                to gain an introductory level of understanding on the subject of deep learning (multiple types of neural
+                networks) from both theoretical and practical standpoints. <em>September 2022 - Forever</em>
+            </p> -->
+
+            <p>
+                <b>DevOps Engineering on AWS</b> | Accredited through ExitCertified, this certification enhances and
                 verifies my knowledge of developer operations for engineering on Amazon Web Services (AWS). Over a 3-day
                 (24 total hours) training session, I learned about AWS cloud computing services and then passed the
-                examination for using the skills learned. <em>June 2021 - Forever</em></p>
+                examination for using the skills learned. <em>June 2021 - Forever</em>
+            </p>
 
-            <p><b>United States Security Clearance - Secret</b>: Granted by the United States Department of Defense
-                (DOD) and Defense Counterintelligence and Security Agency (DCSA). <em>July 2020 - July 2030</em></p>
+            <p>
+                <b>United States Security Clearance - Secret</b> | Granted by the United States Department of Defense
+                (DOD) and Defense Counterintelligence and Security Agency (DCSA). <em>July 2020 - July 2030</em>
+            </p>
         </section>
 
         <br>
