--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                 <p>January 2022 - May 2022</p>
                 <p>
                     <q cite="https://geti2p.net/">Every day people use the network to connect with people without worry
-                        of being tracked or their data being collected.</q> - geti2p.net
+                        of being tracked or their data being collected.</q>
                 </p>
             </aside>
         </section>
@@ -260,7 +260,14 @@
                 <em>INSERT DATE OBTAINED - Forever</em>
             </p> -->
 
-            <!-- 2022 -->
+            <!-- November 2022 -->
+            <!-- <p>
+                <b>LinkedIn Learning: Master the OWASP Top 10</b> | LinkedIn Learning course for mastering the OWASP Top
+                10, which <q cite="https://owasp.org/www-project-top-ten/">is a standard awareness document for
+                    developers and web application security.</q> <em>September 2022 - Forever</em>
+            </p> -->
+
+            <!-- September 2022 -->
             <!-- <p>
                 <b>Deep Learning A-Z&trade;: Hands-On Artificial Neural Networks</b> | Udemy's online course allowed me
                 to gain an introductory level of understanding on the subject of deep learning (multiple types of neural
