Cleaned up landing page and added project

--- a/index.html
+++ b/index.html
@@ -41,49 +41,11 @@
             <h2><a href="#about-me">About Me</a></h2>
             <hr>
 
-            <p class="indent">Hello, I'm Chris Bilger and I am a <em>soon-to-be</em> husband, <em>soon-to-be</em>
-                father, engineer, educator, and leader. I currently work as a Software Engineer at Lockheed Martin where
-                I design, build, test, and deploy full-stack applications for various enterprises.</p>
-        </section>
-
-        <br>
-
-        <section id="relevant-skills-section">
-            <hr id="relevant-skills">
-            <h2><a href="#relevant-skills">Relevant Skills</a></h2>
-            <hr>
-
-            <table>
-                <tbody>
-                    <tr>
-                        <td>Agile, Scrum, and Kanban Development Methodologies</td>
-                    </tr>
-                    <tr>
-                        <td>Amazon Web Services (AWS) & Google Cloud Platform (GCP)</td>
-                    </tr>
-                    <tr>
-                        <td>Full-Stack Development & DevSecOps Lifecycle</td>
-                    </tr>
-                    <tr>
-                        <td>JavaScript, TypeScript, Node, Python, Deno</td>
-                    </tr>
-                    <tr>
-                        <td>Rust, Java, C++, C, Go, Lisp</td>
-                    </tr>
-                    <tr>
-                        <td>Jira, Bitbucket, Confluence, Jenkins, GitLab</td>
-                    </tr>
-                    <tr>
-                        <td>CI/CD Pipeline Design & Microservice Architecture</td>
-                    </tr>
-                    <tr>
-                        <td>Ansible, Terraform, Artifactory, Rancher, Docker, Kubernetes</td>
-                    </tr>
-                    <tr>
-                        <td>Grafana, JUnit, Cucumber, Robot Framework, Chef</td>
-                    </tr>
-                </tbody>
-            </table>
+            <p class="indent">
+                Hello, I'm Chris Bilger and I am a <em>soon-to-be</em> husband, <em>soon-to-be</em> father, engineer,
+                educator, and leader. I currently work as a Software Engineer at Lockheed Martin where I design, build,
+                test, and deploy full-stack applications for various enterprises.
+            </p>
         </section>
 
         <br>
@@ -241,33 +203,52 @@
         <br>
 
         <section>
+            <hr id="relevant-skills">
+            <h2><a href="#relevant-skills">Relevant Skills</a></h2>
+            <hr>
+
+            <p class="indent">
+                I have extensive experience working on fast-paced, high-output Agile teams using both Scrum and Kanban
+                methodologies. From self-hosted GitLab instances running CI/CD pipelines to full Atlassian suite
+                production environments, I have the skillset and know-how to architecture, plan, and implement such
+                complex, dynamic systems.
+            </p>
+
+            <p class="indent">
+                Being a full-stack software engineer gives me the express responsibility to keep up-to-date with the
+                latest trends in frontend, middleware, and backend web development technologies. I've worked
+                professionally with the following tech stacks: MERN, MEVN, Django, Java Springboot, AWS, Azure, and many
+                others.
+            </p>
+
+            <p class="indent">
+                I am most proficient with React and Vue as frontend frameworks, Express JS as middleware, and both
+                NodeJS and Django on the backend. As far as databases go, all types of SQL and NoSQL databases are
+                within my abilities.
+            </p>
+
+            <p class="indent">
+                I have experience in many areas of software engineering and I'm constantly learning new frameworks,
+                methodologies, tech stacks, development workflows, and processes. I put an extremely high emphasis on
+                well-written and thought-out code as well as code that is documented, linted, formatted, style checked,
+                etc. I truly believe that if you're going to do something (in this case software engineering), do it
+                right the first time.
+            </p>
+        </section>
+
+        <br />
+
+        <section>
             <hr id="certifications">
             <h2><a href="#certifications">Certifications</a></h2>
             <hr>
 
-            <!-- 2023 -->
-            <!-- <p>
-                <b>Professional Scrum Master&trade; I</b> | The PSM I training and certification taught me the
-                fundamentals of leading a scrum team as a Scrum Master in the field of software engineering.
-                <em>INSERT DATE OBTAINED - Forever</em>
-            </p> -->
-
-            <!-- 2023 -->
-            <!-- <p>
-                <b>Lead Software Engineer Development Qualification Program</b> | Lockheed Martin's internal training
-                and qualification program for transitioning mid-level software engineers into leadership roles allowed
-                me to fine-tune and refine my leadership skills as well as put them to use on engineering teams.
-                <em>INSERT DATE OBTAINED - Forever</em>
-            </p> -->
-
-            <!-- November 2022 -->
             <!-- <p>
                 <b>LinkedIn Learning: Master the OWASP Top 10</b> | LinkedIn Learning course for mastering the OWASP Top
                 10, which <q cite="https://owasp.org/www-project-top-ten/">is a standard awareness document for
-                    developers and web application security.</q> <em>September 2022 - Forever</em>
+                    developers and web application security.</q> <em>October 2022 - Forever</em>
             </p> -->
 
-            <!-- September 2022 -->
             <!-- <p>
                 <b>Deep Learning A-Z&trade;: Hands-On Artificial Neural Networks</b> | Udemy's online course allowed me
                 to gain an introductory level of understanding on the subject of deep learning (multiple types of neural
