--- a/index.html
+++ b/index.html
@@ -244,6 +244,10 @@
             <hr>
 
             <!-- <p>
+                <b>Brilliant: X Y Z</b> | X Y Z <em>January 2023 - Forever</em>
+            </p> -->
+
+            <!-- <p>
                 <b>LinkedIn Learning: Master the OWASP Top 10</b> | LinkedIn Learning course for mastering the OWASP Top
                 10, which <q cite="https://owasp.org/www-project-top-ten/">is a standard awareness document for
                     developers and web application security.</q> <em>October 2022 - Forever</em>
