Updated with 2 completed certs and resume

--- a/index.html
+++ b/index.html
@@ -243,11 +243,16 @@
             <h2><a href="#certifications">Certifications</a></h2>
             <hr>
 
-            <!-- <p>
-                <b>Deep Learning A-Z&trade;: Hands-On Artificial Neural Networks</b> | Udemy's online course allowed me
-                to gain an introductory level of understanding on the subject of deep learning (multiple types of neural
-                networks) from both theoretical and practical standpoints. <em>September 2022 - Forever</em>
-            </p> -->
+            <p>
+                <b>LinkedIn Learning: Become a Thought Leader</b> |
+                <q cite="https://www.linkedin.com/learning/paths/become-a-thought-leader">Thought leaders stand out from
+                    the rest in their field—they create their own advantage to advance faster in their careers, attract
+                    more business, build more wealth, and spread their message. Learn how to take what you know, what
+                    you do, and who you are and share it more widely and effectively to be known as an expert in your
+                    industry.
+                </q>
+                <em>August 2022 - Forever</em>
+            </p>
 
             <p>
                 <b>LinkedIn Learning: Master the OWASP Top 10</b> | LinkedIn Learning course for mastering the OWASP Top
