Added to about-me section

--- a/index.html
+++ b/index.html
@@ -46,6 +46,12 @@
                 educator, and leader. I currently work as a Software Engineer at Lockheed Martin where I design, build,
                 test, and deploy full-stack applications for various enterprises.
             </p>
+
+            <p class="indent">
+                I am deeply intrigued with continuous learning, teaching, discovering, and building in all facets of my
+                life. From my professional career in software engineering to my personal life and hobbies, I want to
+                learn something new every day, and share that new knowledge with others.
+            </p>
         </section>
 
         <br>
