Started blog 3 and project experiment 1

--- a/index.html
+++ b/index.html
@@ -255,8 +255,7 @@
                     the rest in their field—they create their own advantage to advance faster in their careers, attract
                     more business, build more wealth, and spread their message. Learn how to take what you know, what
                     you do, and who you are and share it more widely and effectively to be known as an expert in your
-                    industry.
-                </q>
+                    industry.</q>
                 <em>August 2022 - Forever</em>
             </p>
 
