--- a/projects/index.html
+++ b/projects/index.html
@@ -40,6 +40,10 @@
             <table id="link-table">
                 <tbody>
                     <tr>
+                        <td><a href="/projects/experiment-1">Experiment: JavaScript UI Framework</a></td>
+                    </tr>
+
+                    <tr>
                         <td><a href="/projects/cube-mate">Cube Mate (Rubik's Cube Tools)</a></td>
                     </tr>
 
