--- a/index.html
+++ b/index.html
@@ -96,6 +96,19 @@
         <h2><a href="#professional-experience">Professional Experience</a></h2>
         <hr />
 
+        <!--<aside>
+          <h3>Senior Software Engineer</h3>
+          <p class="lockheed-martin">Lockheed Martin Corporation</p>
+          <p><b>INSERT START DATE</b> - <b>Present</b></p>
+          <p>
+            At Lockheed Martin I design, build, test, and deploy full-stack
+            applications.
+            <br />
+            <br />
+            <code>Internal Title: <b>Senior Member of Engineering Staff (L3)</b></code>
+          </p>
+        </aside>-->
+
         <aside>
           <h3>Software Engineer</h3>
           <p class="lockheed-martin">Lockheed Martin Corporation</p>
