--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <h2><a href="#professional-experience">Professional Experience</a></h2>
         <hr />
 
-        <!--<aside>
+        <!-- <aside>
           <h3>Senior Software Engineer</h3>
           <p class="lockheed-martin">Lockheed Martin Corporation</p>
           <p><b>INSERT START DATE</b> - <b>Present</b></p>
@@ -105,9 +105,12 @@
             applications.
             <br />
             <br />
-            <code>Internal Title: <b>Senior Member of Engineering Staff (L3)</b></code>
+            <code
+              >Internal Title:
+              <b>Senior Member of Engineering Staff (L3)</b></code
+            >
           </p>
-        </aside>-->
+        </aside> -->
 
         <aside>
           <h3>Software Engineer</h3>
@@ -199,6 +202,13 @@
         <h2><a href="#education">Education</a></h2>
         <hr />
 
+        <!-- <aside>
+          <h3>Doctor of Philosophy: Computer Science (PhD)</h3>
+          <p>University of North Dakota</p>
+          <p><b>INSERT START DATE</b> - <b>Present</b></p>
+          <p>Research areas of interest include: <b>ADD MORE</b></p>
+        </aside> -->
+
         <aside>
           <h3>Master of Computer Science (M.C.S.)</h3>
           <p>Arizona State University</p>
@@ -258,6 +268,21 @@
           >
         </h2>
         <hr />
+
+        <!-- <aside>
+          <h3>Academic Research: PhD</h3>
+          <a
+            href="https://github.com/ChristopherBilg/research-papers"
+            target="_blank"
+            class="external-link"
+            >Research Papers</a
+          >
+          <p><b>INSERT START DATE</b> - <b>Present</b></p>
+          <p>
+            The above hyperlink is a repository containing all of my research
+            papers.
+          </p>
+        </aside> -->
 
         <aside>
           <h3>Academic Research: M.C.S.</h3>
@@ -376,8 +401,22 @@
         <h2><a href="#certifications">Certifications</a></h2>
         <hr />
 
+        <!-- <p>
+          <b class="certification-title">
+            Lockheed Martin: Lead Software Engineer Development Qualification
+            Program
+          </b>
+          <br />
+          <em class="certification-date"
+            ><b>INSERT DATE COMPLETED</b> - Forever</em
+          >
+        </p> -->
+
         <p>
-          <b>LinkedIn Learning: Become a Thought Leader</b> |
+          <b class="certification-title"
+            >LinkedIn Learning: Become a Thought Leader</b
+          >
+          <br />
           <q
             cite="https://www.linkedin.com/learning/paths/become-a-thought-leader"
             >Thought leaders stand out from the rest in their field—they create
@@ -386,33 +425,45 @@
             take what you know, what you do, and who you are and share it more
             widely and effectively to be known as an expert in your industry.</q
           >
-          <em>August 2022 - Forever</em>
+          <br />
+          <em class="certification-date">August 2022 - Forever</em>
         </p>
 
         <p>
-          <b>LinkedIn Learning: Master the OWASP Top 10</b> | LinkedIn Learning
-          course for mastering the OWASP Top 10, which
+          <b class="certification-title"
+            >LinkedIn Learning: Master the OWASP Top 10</b
+          >
+          <br />
+          LinkedIn Learning course for mastering the OWASP Top 10, which
           <q cite="https://owasp.org/www-project-top-ten/"
             >is a standard awareness document for developers and web application
             security.</q
           >
-          <em>August 2022 - Forever</em>
+          <br />
+          <em class="certification-date">August 2022 - Forever</em>
         </p>
 
         <p>
-          <b>DevOps Engineering on AWS</b> | Accredited through ExitCertified,
-          this certification enhances and verifies my knowledge of developer
-          operations for engineering on Amazon Web Services (AWS). Over a 3-day
-          (24 total hours) training session, I learned about AWS cloud computing
-          services and then passed the examination for using the skills learned.
-          <em>June 2021 - Forever</em>
+          <b class="certification-title">DevOps Engineering on AWS</b>
+          <br />
+          Accredited through ExitCertified, this certification enhances and
+          verifies my knowledge of developer operations for engineering on
+          Amazon Web Services (AWS). Over a 3-day (24 total hours) training
+          session, I learned about AWS cloud computing services and then passed
+          the examination for using the skills learned.
+          <br />
+          <em class="certification-date">June 2021 - Forever</em>
         </p>
 
         <p>
-          <b>United States Security Clearance - Secret</b> | Granted by the
-          United States Department of Defense (DOD) and Defense
+          <b class="certification-title"
+            >United States Security Clearance - Secret</b
+          >
+          <br />
+          Granted by the United States Department of Defense (DOD) and Defense
           Counterintelligence and Security Agency (DCSA).
-          <em>July 2020 - July 2030</em>
+          <br />
+          <em class="certification-date">July 2020 - July 2030</em>
         </p>
       </section>
 
