Updated future education program

--- a/index.html
+++ b/index.html
@@ -204,9 +204,12 @@
 
         <!-- <aside>
           <h3>Doctor of Philosophy: Computer Science (PhD)</h3>
-          <p>University of North Dakota</p>
+          <p>Northcentral University</p>
           <p><b>INSERT START DATE</b> - <b>Present</b></p>
-          <p>Research areas of interest include: <b>ADD MORE</b></p>
+          <p>
+            Research areas of interest include, but are not limited to: AGI, AI,
+            ML, Cybersecurity, IoT, language and compiler design
+          </p>
         </aside> -->
 
         <aside>
