Fixed images not having heights defined, causing low lighthouse score

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         alt="Image of Chris Bilger"
         src="./images/profile.avif"
         width="320"
+        height="200.53"
       />
 
       <section>
@@ -208,7 +209,8 @@
           <p><b>INSERT START DATE</b> - <b>Present</b></p>
           <p>
             Research areas of interest include, but are not limited to: AGI, AI,
-            ML, Cybersecurity, IoT, language and compiler design
+            ML, Cybersecurity, IoT, language and compiler design, secure
+            software, software engineering
           </p>
         </aside> -->
 
