--- a/projects/index.html
+++ b/projects/index.html
@@ -21,6 +21,7 @@
         alt="Image of a programmer with CSS code on the wall behind him"
         src="../images/projects.avif"
         width="320"
+        height="222.33"
       />
 
       <section>
