--- a/gpg/index.html
+++ b/gpg/index.html
@@ -21,6 +21,7 @@
         alt="Image of an enigma machine sitting in a display case"
         src="../images/gpg.avif"
         width="320"
+        height="213.33"
       />
 
       <section>
