Remove PhD info

--- a/index.html
+++ b/index.html
@@ -98,6 +98,22 @@
         <hr />
 
         <!-- <aside>
+          <h3>Lead Software Engineer</h3>
+          <p class="lockheed-martin">Lockheed Martin Corporation</p>
+          <p><b>INSERT START DATE</b> - <b>Present</b></p>
+          <p>
+            At Lockheed Martin I design, build, test, and deploy full-stack
+            applications.
+            <br />
+            <br />
+            <code
+              >Internal Title:
+              <b>Lead Member of Engineering Staff (L4)</b></code
+            >
+          </p>
+        </aside> -->
+
+        <!-- <aside>
           <h3>Senior Software Engineer</h3>
           <p class="lockheed-martin">Lockheed Martin Corporation</p>
           <p><b>INSERT START DATE</b> - <b>Present</b></p>
@@ -127,22 +143,22 @@
         </aside>
 
         <aside>
+          <h3>Internal Research and Development</h3>
+          <p class="lockheed-martin">Lockheed Martin Corporation</p>
+          <p>March 2022 - <b>Present</b></p>
+          <p>
+            Innovative, cutting-edge research and development on new Lockheed
+            Martin products.
+          </p>
+        </aside>
+
+        <aside>
           <h3>Paternity Leave</h3>
           <p class="family-medical-leave">Family and Medical Leave</p>
           <p>November 2022 - January 2023</p>
           <p>
             Time spent taking care of my fiancé post-partum and bonding with our
             newborn.
-          </p>
-        </aside>
-
-        <aside>
-          <h3>Internal Research and Development</h3>
-          <p class="lockheed-martin">Lockheed Martin Corporation</p>
-          <p>March 2022 - October 2022</p>
-          <p>
-            Innovative, cutting-edge research and development on new Lockheed
-            Martin products.
           </p>
         </aside>
 
@@ -162,8 +178,8 @@
           <p class="lockheed-martin">Lockheed Martin Corporation</p>
           <p>May 2020 - April 2022</p>
           <p>
-            At Lockheed Martin I work with a team of engineers building
-            full-stack applications.
+            At Lockheed Martin I design, build, test, and deploy full-stack
+            applications.
             <br />
             <br />
             <code
@@ -202,17 +218,6 @@
         <hr id="education" />
         <h2><a href="#education">Education</a></h2>
         <hr />
-
-        <!-- <aside>
-          <h3>Doctor of Philosophy: Computer Science (PhD)</h3>
-          <p>Northcentral University</p>
-          <p><b>INSERT START DATE</b> - <b>Present</b></p>
-          <p>
-            Research areas of interest include, but are not limited to: AGI, AI,
-            ML, Cybersecurity, IoT, language and compiler design, secure
-            software, software engineering
-          </p>
-        </aside> -->
 
         <aside>
           <h3>Master of Computer Science (M.C.S.)</h3>
@@ -273,21 +278,6 @@
           >
         </h2>
         <hr />
-
-        <!-- <aside>
-          <h3>Academic Research: PhD</h3>
-          <a
-            href="https://github.com/ChristopherBilg/research-papers"
-            target="_blank"
-            class="external-link"
-            >Research Papers</a
-          >
-          <p><b>INSERT START DATE</b> - <b>Present</b></p>
-          <p>
-            The above hyperlink is a repository containing all of my research
-            papers.
-          </p>
-        </aside> -->
 
         <aside>
           <h3>Academic Research: M.C.S.</h3>
@@ -406,17 +396,6 @@
         <h2><a href="#certifications">Certifications</a></h2>
         <hr />
 
-        <!-- <p>
-          <b class="certification-title">
-            Lockheed Martin: Lead Software Engineer Development Qualification
-            Program
-          </b>
-          <br />
-          <em class="certification-date"
-            ><b>INSERT DATE COMPLETED</b> - Forever</em
-          >
-        </p> -->
-
         <p>
           <b class="certification-title"
             >LinkedIn Learning: Become a Thought Leader</b
@@ -468,7 +447,7 @@
           Granted by the United States Department of Defense (DOD) and Defense
           Counterintelligence and Security Agency (DCSA).
           <br />
-          <em class="certification-date">July 2020 - July 2030</em>
+          <em class="certification-date">July 2020 - <b>Present</b></em>
         </p>
       </section>
 
