Added potential professional experience

--- a/index.html
+++ b/index.html
@@ -152,6 +152,18 @@
           </p>
         </aside>
 
+        <!-- <aside>
+          <h3>Deputy to the Readiness Software Architect</h3>
+          <p class="lockheed-martin">Lockheed Martin Corporation</p>
+          <p>February 2023 - August 2023</p>
+          <p>
+            Performing and supporting readiness technical trade studies,
+            identification and definition of architectural drivers, participate
+            in reviews from the top-level down, and help drive digitial
+            transformation strategies.
+          </p>
+        </aside> -->
+
         <aside>
           <h3>Paternity Leave</h3>
           <p class="family-medical-leave">Family and Medical Leave</p>
