Added potential certification

--- a/index.html
+++ b/index.html
@@ -408,6 +408,23 @@
         <h2><a href="#certifications">Certifications</a></h2>
         <hr />
 
+        <!-- <p>
+          <b class="certification-title"
+            >Lockheed Martin: Lead Software Engineer Development Qualification
+            Program</b
+          >
+          <br />
+          This program seeks to identify people across the organization (Rotary
+          and Mission Systems) that are qualified and on track to practice as
+          technical leaders on proposals and programs, providing incentive for
+          technical professionals to grow their skills and expertise in leading
+          technical teams.
+          <br />
+          <em class="certification-date"
+            ><b>INSERT DATE OBTAINED</b> - Forever</em
+          >
+        </p> -->
+
         <p>
           <b class="certification-title"
             >LinkedIn Learning: Become a Thought Leader</b
