Fixed auto-downloaded armored keys

--- a/gpg/index.html
+++ b/gpg/index.html
@@ -44,7 +44,11 @@
         </p>
 
         <p>
-          <a href="./personal-gpg.asc" class="external-link">
+          <a
+            href="./personal-gpg.asc.txt"
+            target="_blank"
+            class="external-link"
+          >
             Armored Public Key
           </a>
         </p>
@@ -60,7 +64,11 @@
         </p>
 
         <p>
-          <a href="./academia-gpg.asc" class="external-link">
+          <a
+            href="./academia-gpg.asc.txt"
+            target="_blank"
+            class="external-link"
+          >
             Armored Public Key
           </a>
         </p>
