Cleaned up portfolio and added a new project idea

--- a/index.html
+++ b/index.html
@@ -98,34 +98,17 @@
         <hr />
 
         <!-- <aside>
-          <h3>Lead Software Engineer</h3>
-          <p class="lockheed-martin">Lockheed Martin Corporation</p>
-          <p><b>INSERT START DATE</b> - <b>Present</b></p>
-          <p>
-            At Lockheed Martin I design, build, test, and deploy full-stack
-            applications.
-            <br />
-            <br />
-            <code
-              >Internal Title:
-              <b>Lead Member of Engineering Staff (L4)</b></code
-            >
-          </p>
-        </aside> -->
-
-        <!-- <aside>
           <h3>Senior Software Engineer</h3>
           <p class="lockheed-martin">Lockheed Martin Corporation</p>
-          <p><b>INSERT START DATE</b> - <b>Present</b></p>
+          <p>May 2025 - <b>Present</b></p>
           <p>
-            At Lockheed Martin I design, build, test, and deploy full-stack
-            applications.
-            <br />
-            <br />
             <code
-              >Internal Title:
+              >Internal Position:
               <b>Senior Member of Engineering Staff (L3)</b></code
             >
+            <br />
+            <br />
+            <b>- ADD LINES HERE</b>
           </p>
         </aside> -->
 
@@ -134,35 +117,20 @@
           <p class="lockheed-martin">Lockheed Martin Corporation</p>
           <p>May 2022 - <b>Present</b></p>
           <p>
-            At Lockheed Martin I design, build, test, and deploy full-stack
-            applications.
+            <code>Internal Position: <b>Member of Engineering Staff (L2)</b></code>
             <br />
             <br />
-            <code>Internal Title: <b>Member of Engineering Staff (L2)</b></code>
+            - Primary software engineer on an
+            <abbr title="Internal Research and Development">IRAD</abbr> effort
+            to build out an
+            <abbr title="Enterprise of Lockheed Martin Corporation"
+              >enterprise</abbr
+            >
+            offering of APICurio Registry & APICurio Studio
+            <br />
+            - New Hire Mentor for 1 new employee
           </p>
         </aside>
-
-        <aside>
-          <h3>Internal Research and Development</h3>
-          <p class="lockheed-martin">Lockheed Martin Corporation</p>
-          <p>March 2022 - <b>Present</b></p>
-          <p>
-            Innovative, cutting-edge research and development on new Lockheed
-            Martin products.
-          </p>
-        </aside>
-
-        <!-- <aside>
-          <h3>Deputy to the Readiness Software Architect</h3>
-          <p class="lockheed-martin">Lockheed Martin Corporation</p>
-          <p>February 2023 - August 2023</p>
-          <p>
-            Performing and supporting readiness technical trade studies,
-            identification and definition of architectural drivers, participate
-            in reviews from the top-level down, and help drive digitial
-            transformation strategies.
-          </p>
-        </aside> -->
 
         <aside>
           <h3>Paternity Leave</h3>
@@ -175,51 +143,29 @@
         </aside>
 
         <aside>
-          <h3>New Hire Mentor</h3>
-          <p class="lockheed-martin">Lockheed Martin Corporation</p>
-          <p>May 2022 - September 2022</p>
-          <p>
-            As a New Hire Mentor, I spent time educating two new employees about
-            Lockheed Martin Corporation. I also ensured that their day-to-day
-            transitions in their current roles went smoothly.
-          </p>
-        </aside>
-
-        <aside>
           <h3>Associate Software Engineer</h3>
           <p class="lockheed-martin">Lockheed Martin Corporation</p>
           <p>May 2020 - April 2022</p>
           <p>
-            At Lockheed Martin I design, build, test, and deploy full-stack
-            applications.
-            <br />
-            <br />
             <code
-              >Internal Title:
+              >Internal Position:
               <b>Associate Member of Engineering Staff (L1)</b></code
             >
-          </p>
-        </aside>
-
-        <aside>
-          <h3>New Hire Mentor</h3>
-          <p class="lockheed-martin">Lockheed Martin Corporation</p>
-          <p>May 2021 - September 2021</p>
-          <p>
-            As a New Hire Mentor, I spent time educating two new employees about
-            Lockheed Martin Corporation. I also ensured that their day-to-day
-            transitions in their current roles went smoothly.
-          </p>
-        </aside>
-
-        <aside>
-          <h3>New Hire Mentor</h3>
-          <p class="lockheed-martin">Lockheed Martin Corporation</p>
-          <p>May 2020 - September 2020</p>
-          <p>
-            As a New Hire Mentor, I spent time educating a new employee about
-            Lockheed Martin Corporation. I also ensured that their day-to-day
-            transitions in their current roles went smoothly.
+            <br />
+            <br />
+            - Worked on the Oasis Base development team
+            <br />
+            - Worked closely with the
+            <abbr title="Synthetic Combat Operator Trainer; Republic of Korea"
+              >SCOT K2</abbr
+            >
+            development team; traveled to the Republic of Korea
+            <br />
+            - Primary software engineer on an
+            <abbr title="Internal Research and Development">IRAD</abbr> effort
+            to modernize Oasis Base 3rd-party API integration
+            <br />
+            - New Hire Mentor for 3 new employees
           </p>
         </aside>
       </section>
