--- a/projects/index.html
+++ b/projects/index.html
@@ -50,6 +50,12 @@
           <tbody>
             <tr>
               <td>
+                <a href="/projects/js-drag-and-drop">JS Drag and Drop</a>
+              </td>
+            </tr>
+
+            <tr>
+              <td>
                 <a href="/projects/desktop-environment"
                   >Desktop Environment (Webtop)</a
                 >
