Added current LMCO project/team that I missed

--- a/index.html
+++ b/index.html
@@ -117,7 +117,9 @@
           <p class="lockheed-martin">Lockheed Martin Corporation</p>
           <p>May 2022 - <b>Present</b></p>
           <p>
-            <code>Internal Position: <b>Member of Engineering Staff (L2)</b></code>
+            <code
+              >Internal Position: <b>Member of Engineering Staff (L2)</b></code
+            >
             <br />
             <br />
             - Primary software engineer on an
@@ -127,6 +129,10 @@
               >enterprise</abbr
             >
             offering of APICurio Registry & APICurio Studio
+            <br />
+            - Member of architecture team overseeing the design of new
+            functionality for Oasis
+            <abbr title="United States Navy Baseline">USN BL</abbr> 9.23
             <br />
             - New Hire Mentor for 1 new employee
           </p>
