--- a/projects/index.html
+++ b/projects/index.html
@@ -56,14 +56,6 @@
 
             <tr>
               <td>
-                <a href="/projects/desktop-environment"
-                  >Desktop Environment (Webtop)</a
-                >
-              </td>
-            </tr>
-
-            <tr>
-              <td>
                 <a href="/projects/js-web-workers">JS Web Workers</a>
               </td>
             </tr>
@@ -108,6 +100,14 @@
               <td>
                 <a href="/projects/password-generator"
                   >Client-Only Password Generator</a
+                >
+              </td>
+            </tr>
+
+            <tr hidden>
+              <td>
+                <a href="/projects/desktop-environment"
+                  >Desktop Environment (Webtop)</a
                 >
               </td>
             </tr>
